--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,8 @@ bevy = "0.17.2"
 rand_core = "0.9"
 rand = "0.9"
 bevy_rand = { version = "0.12", features = ["wyrand"] }
+bevy-inspector-egui = "0.34.0"
+bevy_egui = "0.37.0"
 
 # Enable a small amount of optimization in the dev profile.
 [profile.dev]
